tests/invalid/Assert_Invalid_2.whiley

public method m(int x, int y) -> bool:
    return x < y

public method main() :
    assert m(10, 20)
